--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: sans-serif, Helvetica, Arial;
 }
 
 .clearfix { /*Lo de abajo no se monte con lo de arriba, etiquetas header, main y footer*/
@@ -203,4 +204,21 @@ input[type="submit"] {
     width: 18rem;
     margin: 0 auto;
     margin-top: 5rem;
+}
+
+/* FOOTER */
+
+.site-footer {
+    font-size: 1.6rem;
+    clear: both;
+    width: 85%;
+    margin: 0 auto;
+    background: linear-gradient(to bottom, #f9f9f9 0px, #e9e9e9 100%);
+    border: 1px solid #c9c9c9;
+    border-bottom: none;
+    border-radius: 8px 8px 0 0;
+    color: #666;
+    height: auto;
+    padding: 15px;
+    text-align: center;
 }
