--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,7 +156,8 @@ input[type="password"] {
 }
 
 input[type="button"], 
-input[type="submit"] {
+input[type="submit"],
+.botton {
     margin-top: 5px;
     margin-bottom: 5px;
     display: block;
@@ -166,6 +167,19 @@ input[type="submit"] {
     border: 1px solid #156785;
     cursor: pointer;
     padding: 7px;
+}
+
+.botton {
+    text-align: center;
+    width: 130px;
+}
+.botton-orange {
+    background: orange;
+    border-color: #bd7d08;
+}
+.botton-green {
+    background: #21b921;
+    border-color: green;
 }
 
 /* PRINCIPAL */
