Se crearon los botones de edición
Se añadio el autor del POST
Editar y eliminar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,6 +176,7 @@ input[type="submit"],
 }
 
 .botton {
+    color: white !important;
     text-align: center;
     width: 130px;
 }
@@ -187,7 +188,6 @@ input[type="submit"],
     background: #21b921;
     border-color: green;
 }
-
 
 .botton-red {
     background-color: red;
